<resources>
    <string name="app_name">assignment</string>
    <string name="title_activity_home">Home_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="shopping">Shopping</string>
    <string name="todo">TODO</string>
    <string name="blazer">Blazer</string>
    <string name="color_grey">Color: Grey</string>
    <string name="_99">$ 99</string>
    <string name="accessories">Accessories</string>
</resources>