<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.HomeFragment">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="156dp"
            android:layout_height="46dp"
            android:layout_marginStart="111dp"
            android:layout_marginTop="7dp"
            android:text="Add to Cart :"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="156dp"
            android:layout_height="46dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="32dp"
            android:text="Add to Cart :"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="143dp"
            android:layout_height="34dp"
            android:layout_marginStart="52dp"
            android:text="@string/color_grey"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="274dp"
            android:layout_height="66dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/shopping"
            android:textAllCaps="false"
            android:textColor="#323F59"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="358dp"
            android:layout_height="443dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="19dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/blazer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blaze" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="116dp"
            android:layout_height="39dp"
            android:layout_marginStart="52dp"
            android:text="@string/blazer"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="143dp"
            android:layout_height="34dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="4dp"
            android:text="Color : Blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/as" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="143dp"
            android:layout_height="34dp"
            android:layout_marginStart="52dp"
            android:text="Full Fit Grey"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="108dp"
            android:layout_height="40dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="51dp"
            android:text="@string/_99"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <TextView
            android:id="@+id/blaze"
            android:layout_width="213dp"
            android:layout_height="23dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="165dp"
            android:text="@string/accessories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <ImageButton
            android:id="@+id/cart"
            android:layout_width="108dp"
            android:layout_height="78dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="52dp"
            android:src="@drawable/ic_baseline_shopping_cart_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="156dp"
            android:layout_height="46dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="32dp"
            android:text="Add to Cart :"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <ImageView
            android:id="@+id/denim"
            android:layout_width="409dp"
            android:layout_height="436dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/denim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cart"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/as"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="1dp"
            android:text="Denim"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/denim" />

        <ImageView
            android:id="@+id/tshirt"
            android:layout_width="409dp"
            android:layout_height="436dp"
            android:layout_marginTop="47dp"
            android:src="@drawable/tshirt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cart4"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="80dp"
            android:text="$ 77"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/denim" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="68dp"
            android:text="$ 77"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tshirt" />

        <ImageButton
            android:id="@+id/cart2"
            android:layout_width="108dp"
            android:layout_height="78dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="39dp"
            android:src="@drawable/ic_baseline_shopping_cart_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/cart4"
            android:layout_width="108dp"
            android:layout_height="78dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_baseline_shopping_cart_24"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/textView24"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:text="Casuals"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tshirt" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>